# hermes-agent

./: .env.example  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml  vetting_ui.py
.github/workflows/: ci.yml  deploy.yml  discovery-tick.yml
agents/: _shared.py
agents/application/: __init__.py  agent.py  computer.py
agents/coordinator/: __init__.py  agent.py
agents/discovery/: __init__.py  agent.py
agents/matching/: __init__.py  agent.py
agents/tailoring/: __init__.py  agent.py
agents/tracking/: __init__.py  agent.py
api/: __init__.py  deps.py  main.py
api/app_utils/: __init__.py  middleware.py  telemetry.py  typing.py
api/routes/: __init__.py  applications.py  companies.py  discovery.py  jobs.py  profile.py  worker.py
cli/: __init__.py  discover_companies.py  import_resume.py  migrate_user.py  purge_discarded.py  reset_user.py  run_discovery.py  run_matching.py  run_tailoring.py  sync_profile.py
data/companies/: blocklist.yaml  known.yaml  sweep_queries.yaml  unvetted.yaml
deployment/terraform/single-project/: apis.tf  iam.tf  outputs.tf  providers.tf  service.tf  service_outputs.tf  storage.tf  telemetry.tf  telemetry_outputs.tf  variables.tf  worker.tf
deployment/terraform/single-project/vars/: env.tfvars
models/: application.py  job.py  match.py  profile.py  settings.py
obs/: __init__.py  llm_cost.py  logging.py
tests/integration/: test_agent.py  test_server_e2e.py
tests/unit/: test_api_profile.py  test_batch_runs.py  test_career_sites.py  test_companies_actions.py  test_discard.py  test_dork.py  test_dummy.py  test_jd_cache.py  test_llm_cost.py  test_match_batch.py  test_match_cache.py  test_new_ats_fetchers.py  test_packaging_manifest.py  test_parse_persistence.py  test_persist_new_jobs.py  test_posting_validate.py  test_profile_schema.py  test_queues.py  test_rerank.py  test_submitter_router.py  test_submitters.py  test_sweep.py  test_text.py  test_title_filter.py  test_worker_routes.py
tools/: companies.py  queues.py  text.py
tools/ats/: __init__.py  _http.py  ashby.py  google_jobs.py  greenhouse.py  lever.py  meta_jobs.py  recruitee.py  smartrecruiters.py  sweep.py  validate.py  workable.py
tools/discovery/: __init__.py  dork.py  pipeline.py  title_filter.py
tools/matching/: __init__.py  batch.py  batch_runs.py  jd_cache.py  pipeline.py  score.py
tools/profile/: __init__.py  extract.py
tools/submitters/: ashby.py  common.py  greenhouse.py  lever.py  router.py  storage.py
tools/tailoring/: objective.py  pipeline.py  render.py  rerank.py
web/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/app/applications/: page.tsx  status.ts
web/src/app/applications/[id]/review/: page.tsx
web/src/app/interviews/: page.tsx
web/src/app/login/: page.tsx
web/src/app/onboarding/: page.tsx
web/src/app/onboarding/review/: page.tsx
web/src/app/profile/: page.tsx
web/src/app/settings/companies/: page.tsx
web/src/app/tracking/: page.tsx
web/src/components/: ProfileEditor.tsx  TopNav.tsx  UserAvatar.tsx  editable.tsx
web/src/lib/: api.ts  auth.tsx  firebase.ts  interviews.ts  localStore.ts  session.ts  types.ts  ui.ts
