[project]
name = "hermes"
version = "0.1.0"
description = ""
authors = [
    {name = "Baynham Makusha", email = "btmakusha@gmail.com"},
]



dependencies = [
    # --- Scaffold / gateway (kept from agents-cli) ---
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
    "fastapi>=0.115.8,<1.0.0",
    "uvicorn[standard]~=0.34.0",
    "asyncpg>=0.30.0,<1.0.0",
    "sqlalchemy>=2,<3",
    "python-multipart>=0.0.20,<1.0.0",
    # --- Hermes application (Phase 1.8) ---
    "google-genai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "playwright",
    "sse-starlette",  # SSE progress stream for application submission (Phase 7)
    "google-cloud-firestore",
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "google-auth",
    "google-api-python-client",  # Gmail
    "firebase-admin",  # web auth (verify Firebase ID tokens)
    "python-docx",
    "pypdf",
    "pyyaml",
    "structlog",
    "tenacity",  # retry logic
    "google-cloud-tasks>=2.23.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "streamlit",
]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "ruff>=0.4.6,<1.0.0",
    "ty>=0.0.1a0",
    "codespell>=2.2.0,<3.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"] # ignore line too long, too complex

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables (File/Form/Body) as argument defaults by design; this
# is the same pattern ruff already allowlists for Depends/Query/Header.
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Body"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "api"]

[tool.ty]
# ty is Astral's Rust-based type checker (same team as ruff/uv)
# See: https://docs.astral.sh/ty/

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
# Ignore common issues with third-party libraries and dynamic code patterns
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
# "cach" is the deliberate substring match on cache-shaped error messages in
# tools/matching/pipeline.py; "unparseable" is a valid spelling this codebase
# uses consistently.
ignore-words-list = "rouge,cach,unparseable"
# "./frontend" is the pre-Next.js app dir; kept for old branches. The web app
# lives in ./web now — skip its dependencies and build output, not our code.
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json,./web/node_modules,./web/.next,./data"




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
# "agents" is on the path so agent modules resolve their top-level sibling
# imports (e.g. `from _shared import ...`) the same way the ADK loader does.
pythonpath = [".", "agents"]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["agents","api","models","tools","cli","obs"]


